--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <hr>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, saepe.</p>
                         <div class="img">
-                            <img src="./img/Sans titre 128_20210220190044.png" alt="mascot">
+                            <img src="./img/Sans titre 131_20210223230750.png" alt="mascot" style="width: 100%; margin-top: 20px;">
                         </div>
                     </div>
                 </div>
