--- a/register.html
+++ b/register.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>registration</title>
+    <title>AI - SUMMIT registration</title>
+    <link rel="icon" href="./img/LOGO.png">
     <style type="text/css">
         html {
             margin: 0;
