--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
             <div class="conference-speakers">
                 <span class="left-control is-hidden"></span>
                 <ul>
-
                     <li class="current-slide">
                         <div class="speaker">
                             <div class="speaker-pic">
@@ -181,6 +180,18 @@
                                 <h4>Principal Engineer at Qatar Computing Research Institute</h4>
                                 <p>With a dual profile of CS researcher and software engineer, his focus goes to tackling big urban issues such as traffic congestion, human mobility, air pollution, renewable energy, and city resilience using relevant algorithms,
                                     machine learning, deep learning, and data science techniques.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="speaker">
+                            <div class="speaker-pic">
+                                <img src="./img/1606719183051.jpg" alt="speaker_pic" style="object-fit: cover; ">
+                            </div>
+                            <div class="speaker-info">
+                                <h2>Touami <span>Meriem</span></h2>
+                                <h4>Data Analysis | Data Science | ML/AI</h4>
+                                <p>Information System Analysis | Business Analysis | Project Management | Social Work | Peace Advocate Annandale, Virginia, United States </p>
                             </div>
                         </div>
                     </li>
@@ -212,6 +223,18 @@
                     <li>
                         <div class="speaker">
                             <div class="speaker-pic">
+                                <img src="./img/1607611516579.jpg" alt="speaker_pic" style="object-fit: cover;">
+                            </div>
+                            <div class="speaker-info">
+                                <h2>BENHAMIDA <span>Fatima Zohra</span></h2>
+                                <h4>Assistant Professor; Research and Academic Consultant, Techwomen Emerging Leader</h4>
+                                <p></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="speaker">
+                            <div class="speaker-pic">
                                 <img src="./img/1518514548013.jpg" alt="speaker_pic">
                             </div>
                             <div class="speaker-info">
@@ -222,31 +245,6 @@
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="speaker">
-                            <div class="speaker-pic">
-                                <img src="./img/1536243607495.jpg" alt="speaker_pic">
-                            </div>
-                            <div class="speaker-info">
-                                <h2>Ghouthi boukli <span>hacene</span></h2>
-                                <h4>Post Doc chez MILA. Locmaria-Plouzané, Brittany, France</h4>
-                                <p></p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="speaker">
-                            <div class="speaker-pic">
-                                <img src="./img/1536243607495.jpg" alt="speaker_pic">
-                            </div>
-                            <div class="speaker-info">
-                                <h2>Ghouthi boukli <span>hacene</span></h2>
-                                <h4>Post Doc chez MILA. Locmaria-Plouzané, Brittany, France</h4>
-                                <p></p>
-                            </div>
-                        </div>
-                    </li>
-
                 </ul>
                 <span class="right-control"></span>
                 <div class="dots">
@@ -257,13 +255,9 @@
                     <span class="dot"></span>
                     <span class="dot"></span>
                     <span class="dot"></span>
-
                 </div>
-
             </div>
-
         </div>
-
     </section>
     <!------------------ End Speakers section ------------------------->
 
@@ -319,9 +313,7 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="day-2">
                     <h3 class="day2">Day 2</h3>
                     <div class="day-timing">
@@ -367,7 +359,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -381,7 +372,18 @@
                 <h1 class="title">Sponsors</h1>
             </div>
             <div class="logos">
-                <img src="./img/57079_f2ac3060e304054e7e2d832ba16fd1ee171107d9_yassir_l.png" alt="">
+                <div class="logo">
+                    <a href="https://imaginepartners.com"><img src="./img/imagine-partners.png" alt="imagine-partners_logo"></a>
+                </div>
+                <div class="logo">
+                    <a href="http://www.aquinetic.pro"><img src="./img/Aquinetic.png" alt="aquinetic-logo"></a>
+                </div>
+                <div class="logo">
+                    <a href="http://casbah.tech"><img src="./img/casbah-tech-logo.png" alt="casbah-tech-logo"></a>
+                </div>
+                <div class="logo">
+                    <a href="https://yassir.com/fr/client/"><img src="./img/yassir.png" alt="yassir-logo"></a>
+                </div>
             </div>
         </div>
     </section>
