--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a data-after="SPONSOR" href="#sponsors">Sponsor</a></li>
                     <li><a data-after="CONTACT" href="#contact">Contact</a></li>
 
-                    <span class="dark-mode-btn"></span>
+                    <span class="dark-mode-btn" style="display: inline-block;"></span>
                 </ul>
             </div>
         </div>
@@ -47,7 +47,7 @@
         <div class="home container">
 
             <div class="event-description">
-                <p><span>AI SUMMIT</span><br>Get your dose of AI ...</p>
+                <p><span>AI SUMMIT</span><br>Get your dose of AI</p>
                 <a href="./register.html" type="button" class="register-btn" target="_blank">Register Now</a>
             </div>
             <div class="photo">
@@ -69,7 +69,7 @@
                     <video src=""></video>
                 </div>
                 <div class="text">
-                    <p style="font-size: 20px; line-height: 30px;">AI SUMMIT is a tech event about artificial intelligence ,the event is a series of conferences workshops and challenges destined for Youth with higher levels of education, tech professionals seeking to extend their knowledge in the
+                    <p>AI SUMMIT is a tech event about artificial intelligence ,the event is a series of conferences workshops and challenges destined for Youth with higher levels of education, tech professionals seeking to extend their knowledge in the
                         said field. The participants can be beginners, intermediate or advanced in AI.</p>
                 </div>
             </div>
@@ -284,8 +284,7 @@
                                 <p>11:10am 11:40am</p>
                             </div>
                             <div class="details">
-                                <p>Introduction to AI conference
-                                </p>
+                                <p>Introduction to AI conference</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -293,7 +292,7 @@
                                 <p>1:00pm 2:30pm</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Workshop (ML,datascience ,deep learning ...)</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -301,7 +300,7 @@
                                 <p>2:40pm 4:10pm</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Workshop(ML,datascience ,deep learning ...)</p>
                             </div>
                         </div>
                         <div class="time-container last">
@@ -309,7 +308,7 @@
                                 <p>3:40pm 5:00pm</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Conference</p>
                             </div>
                         </div>
                     </div>
@@ -322,7 +321,7 @@
                                 <p>09:00am 10:00am</p>
                             </div>
                             <div class="details">
-                                <p>day2, ipsum dolor sit amet consectetur</p>
+                                <p>The horizons of AI conference</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -330,7 +329,7 @@
                                 <p>11:10am 11:40am</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Workshop(ML,datascience ,deep learning ...) /projects submissions</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -338,7 +337,7 @@
                                 <p>1:00pm 2:30pm</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Conference</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -346,7 +345,7 @@
                                 <p>2:40pm 4:10pm</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Workshop(ML,datascience ,deep learning ...)</p>
                             </div>
                         </div>
                         <div class="time-container last">
@@ -354,7 +353,7 @@
                                 <p>3:40pm 5:00pm</p>
                             </div>
                             <div class="details">
-                                <p>Lorem, ipsum dolor sit amet consectetur</p>
+                                <p>Hackathon winners announcement</p>
                             </div>
                         </div>
                     </div>
@@ -373,16 +372,16 @@
             </div>
             <div class="logos">
                 <div class="logo">
-                    <a href="https://imaginepartners.com"><img src="./img/imagine-partners.png" alt="imagine-partners_logo"></a>
+                    <a href="https://imaginepartners.com" target="_blank"><img src="./img/imagine-partners.png" alt="imagine-partners_logo"></a>
+                </div>
+                <div class="logo sos-black">
+                    <a href="https://www.sos-recup.com" target="_blank"><img src="./img/sos-logo-black-mode.png" alt="sosRecup-logo"></a>
+                </div>
+                <div class="logo sos-white">
+                    <a href="https://www.sos-recup.com" target="_blank"><img src="./img/sos-logo-white-mode.png" alt="sosRecup-logo"></a>
                 </div>
                 <div class="logo">
-                    <a href="http://www.aquinetic.pro"><img src="./img/Aquinetic.png" alt="aquinetic-logo"></a>
-                </div>
-                <div class="logo">
-                    <a href="http://casbah.tech"><img src="./img/casbah-tech-logo.png" alt="casbah-tech-logo"></a>
-                </div>
-                <div class="logo">
-                    <a href="https://yassir.com/fr/client/"><img src="./img/yassir.png" alt="yassir-logo"></a>
+                    <a href="http://casbah.tech" target="_blank"><img src="./img/casbah-tech-logo.png" alt="casbah-tech-logo"></a>
                 </div>
             </div>
         </div>
