--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 <p><span>AI SUMMIT</span><br>Get your dose of AI</p>
                 <a href="./register.html" type="button" class="register-btn" target="_blank">Register Now</a>
             </div>
-            <div class="photo">
-                <img src="./img/Sans titre 106_20210207150553.png" alt="mascot">
+            <div class="photo dark-mode">
+                <img src="./img/Aity-dark-mode.png" alt="mascot">
+            </div>
+            <div class="photo white-mode">
+                <img src="./img/Aity-white-mode.png" alt="mascot">
             </div>
             <span class="background"></span>
         </div>
@@ -66,7 +69,7 @@
         <div class="about container">
             <div class="event-description">
                 <div class="teaser">
-                    <video src=""></video>
+                    <video src="./img/AI SUMMIT TEASER F.mp4" type="video/mp4" controls autoplay muted type="video/mp4"></video>
                 </div>
                 <div class="text">
                     <p>AI SUMMIT is a tech event about artificial intelligence ,the event is a series of conferences workshops and challenges destined for Youth with higher levels of education, tech professionals seeking to extend their knowledge in the
