--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="speaker-info">
                         <h2>Benyamina <span>Charef eddine</span></h2>
-                        <h4>computer science student</h4>
+                        <h4>Computer Science Student</h4>
                         <p>Team IT member chez Open Minds Club | Bioinformatics student </p>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                             <div class="speaker-info">
                                 <h2>Menouar <span>Hamid</span></h2>
                                 <h4>Senior R&D Expert and Product Manager at QMIC</h4>
-                                <p>13+ years experience in ICT innovation proven through a long list of achievements.He have contributed to several challenging and exciting innovation projects and products in interesting areas that include: Connected Vehicles,
+                                <p>13+ years experience in ICT innovation proven through a long list of achievements. He have contributed to several challenging and exciting innovation projects and products in interesting areas that include: Connected Vehicles,
                                     Smart mobility, IOT, WSN and others.</p>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                                 <p>1:00pm 2:30pm</p>
                             </div>
                             <div class="details">
-                                <p>Workshop (ML,datascience ,deep learning ...)</p>
+                                <p>Workshop (ML, datascience, deep learning ...)</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -303,7 +303,7 @@
                                 <p>2:40pm 4:10pm</p>
                             </div>
                             <div class="details">
-                                <p>Workshop(ML,datascience ,deep learning ...)</p>
+                                <p>Workshop(ML, datascience, deep learning ...)</p>
                             </div>
                         </div>
                         <div class="time-container last">
@@ -332,7 +332,7 @@
                                 <p>11:10am 11:40am</p>
                             </div>
                             <div class="details">
-                                <p>Workshop(ML,datascience ,deep learning ...) /projects submissions</p>
+                                <p>Workshop(ML, datascience, deep learning ...) /projects submissions</p>
                             </div>
                         </div>
                         <div class="time-container">
@@ -348,7 +348,7 @@
                                 <p>2:40pm 4:10pm</p>
                             </div>
                             <div class="details">
-                                <p>Workshop(ML,datascience ,deep learning ...)</p>
+                                <p>Workshop(ML, datascience, deep learning ...)</p>
                             </div>
                         </div>
                         <div class="time-container last">
