--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <video src="./img/AI SUMMIT TEASER F.mp4" type="video/mp4" controls autoplay muted type="video/mp4"></video>
                 </div>
                 <div class="text">
-                    <p>AI SUMMIT is a tech event about artificial intelligence ,the event is a series of conferences workshops and challenges destined for Youth with higher levels of education, tech professionals seeking to extend their knowledge in the
-                        said field. The participants can be beginners, intermediate or advanced in AI.</p>
+                    <p>AI SUMMIT is a tech event organized by CSE which is constituted by a series of worshops and conferences held over multiple days by AI experts so that you learn the basics of artificial intelligence and extend your knowledge in the
+                        said field.</p>
                 </div>
             </div>
             <div class="workshops-part">
