--- a/index.html
+++ b/index.html
@@ -404,18 +404,21 @@
                     </h3>
                 </div>
                 <div class="social light">
-                    <a href="https://www.instagram.com/club.scientifique.esi/" target="_blank"><img src="./img/instagram.svg" alt="" class="imgs"></a>
+                    <a href="https://www.instagram.com/cse.club/?hl=fr" target="_blank"><img src="./img/instagram.svg" alt="" class="imgs"></a>
                     <a href="https://www.facebook.com/club.scientifique.esi/" target="_blank"><img src="./img/facebook.svg" alt="" class="imgs"></a>
                     <a href="https://www.youtube.com/user/ClubScientifiqueESI" target="_blank"><img src="./img/youtube.svg" alt="" class="imgs"></a>
-                    <a href="https://www.linkedin.com/company/club-scientifique-de-l-esi/" target="_blank"><img src="./img/linkedin-sign.svg" alt="" class="imgs"></a>
-                    <a href="https://twitter.com/CSESI" target="_blank"><img src="./img/twitter-sign.svg" alt="" class="imgs"></a>
+                    <a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQFhHo0-KYJJ2AAAAXffsLG4z48kITrww4ihFIX43oG2IdA86Aq4iM0NCOkT-USVELlLNFLL5Mk9BWdFlFyBQGVG1NTKZIRyzOK6u3-f_KhmP_H1sGfxps2QfLqv5h7_xVwyAS4=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fdz.linkedin.com%2Fcompany%2Fcse-club"
+                        target="_blank"><img src="./img/linkedin-sign.svg" alt="" class="imgs"></a>
+                    <a href="https://twitter.com/CSESI_Club" target="_blank"><img src="./img/twitter-sign.svg" alt="" class="imgs"></a>
                 </div>
                 <div class="social black">
-                    <a href="https://www.instagram.com/club.scientifique.esi/" target="_blank"><img src="./img/instagram.png" alt="" class="imgs"></a>
-                    <a href="https://www.facebook.com/club.scientifique.esi/" target="_blank"><img src="./img/facebook.png" alt="" class="imgs"></a>
+                    <a href="https://www.instagram.com/cse.club/?hl=fr" target="_blank"><img src="./img/instagram.png" alt="" class="imgs"></a>
+                    <a href="https://www.facebook.com/club.scientifique.esi/https://www.linkedin.com/authwall?trk=gf&trkInfo=AQFhHo0-KYJJ2AAAAXffsLG4z48kITrww4ihFIX43oG2IdA86Aq4iM0NCOkT-USVELlLNFLL5Mk9BWdFlFyBQGVG1NTKZIRyzOK6u3-f_KhmP_H1sGfxps2QfLqv5h7_xVwyAS4=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fdz.linkedin.com%2Fcompany%2Fcse-club"
+                        target="_blank"><img src="./img/facebook.png" alt="" class="imgs"></a>
                     <a href="https://www.youtube.com/user/ClubScientifiqueESI" target="_blank"><img src="./img/youtube.png" alt="" class="imgs"></a>
-                    <a href="https://www.linkedin.com/company/club-scientifique-de-l-esi/" target="_blank"><img src="./img/linkedin-sign.png" alt="" class="imgs"></a>
-                    <a href="https://twitter.com/CSESI" target="_blank"><img src="./img/twitter-sign.png" alt="" class="imgs"></a>
+                    <a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQFhHo0-KYJJ2AAAAXffsLG4z48kITrww4ihFIX43oG2IdA86Aq4iM0NCOkT-USVELlLNFLL5Mk9BWdFlFyBQGVG1NTKZIRyzOK6u3-f_KhmP_H1sGfxps2QfLqv5h7_xVwyAS4=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fdz.linkedin.com%2Fcompany%2Fcse-club"
+                        target="_blank"><img src="./img/linkedin-sign.png" alt="" class="imgs"></a>
+                    <a href="https://twitter.com/CSESI_Club" target="_blank"><img src="./img/twitter-sign.png" alt="" class="imgs"></a>
                 </div>
                 <p class="copyright">AI SUMMIT - CSE © 2021</p>
             </footer>
