--- a/index.html
+++ b/index.html
@@ -413,8 +413,7 @@
                 </div>
                 <div class="social black">
                     <a href="https://www.instagram.com/cse.club/?hl=fr" target="_blank"><img src="./img/instagram.png" alt="" class="imgs"></a>
-                    <a href="https://www.facebook.com/club.scientifique.esi/https://www.linkedin.com/authwall?trk=gf&trkInfo=AQFhHo0-KYJJ2AAAAXffsLG4z48kITrww4ihFIX43oG2IdA86Aq4iM0NCOkT-USVELlLNFLL5Mk9BWdFlFyBQGVG1NTKZIRyzOK6u3-f_KhmP_H1sGfxps2QfLqv5h7_xVwyAS4=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fdz.linkedin.com%2Fcompany%2Fcse-club"
-                        target="_blank"><img src="./img/facebook.png" alt="" class="imgs"></a>
+                    <a href="https://www.facebook.com/club.scientifique.esi/" target="_blank"><img src="./img/facebook.png" alt="" class="imgs"></a>
                     <a href="https://www.youtube.com/user/ClubScientifiqueESI" target="_blank"><img src="./img/youtube.png" alt="" class="imgs"></a>
                     <a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQFhHo0-KYJJ2AAAAXffsLG4z48kITrww4ihFIX43oG2IdA86Aq4iM0NCOkT-USVELlLNFLL5Mk9BWdFlFyBQGVG1NTKZIRyzOK6u3-f_KhmP_H1sGfxps2QfLqv5h7_xVwyAS4=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fdz.linkedin.com%2Fcompany%2Fcse-club"
                         target="_blank"><img src="./img/linkedin-sign.png" alt="" class="imgs"></a>
